# FedPersonalize-

./: README.md
fedpersonalize-backend/: pyproject.toml
fedpersonalize-backend/app/: main.py
fedpersonalize-backend/federated/: client_app.py  server_app.py  task.py
fedpersonalize-frontend/: index.html  package-lock.json  package.json
fedpersonalize-frontend/src/: App.tsx
